# iona_v0.27.1-release

./: CHANGELOG.md  Cargo.toml  Dockerfile  FIXES.md  LICENSE  README.md  SECURITY.md  UPGRADE.md  audit.rs  config.rs  config.toml  deny.toml  docker-compose.yml  evidence.rs  execution.rs  governance.rs  lib.rs  merkle.rs  metrics.rs  rpc_limits.rs  slashing.rs  snapshot.rs  wal.rs
api/: openapi.yaml
benches/: core_benchmarks.rs
config/: ultra.toml
consensus/: block_producer.rs  double_sign.rs  engine.rs  fast_finality.rs  messages.rs  mod.rs  quorum.rs  validator_set.rs
crypto/: ed25519.rs  hsm.rs  keystore.rs  mod.rs  remote_signer.rs  tx.rs
deploy/systemd/: iona-node.service
economics/: governance.rs  mod.rs  params.rs  rewards.rs  staking.rs  staking_tx.rs
evm/: db.rs  executor.rs  executor_env.rs  kv_state_db.rs  mod.rs  types.rs
execution/: parallel.rs  vm_executor.rs
formal/: upgrade.tla
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: block_header.rs  consensus_msg.rs  p2p_frame_decode.rs  rpc_json.rs  tx_json.rs  vm_bytecode.rs
mempool/: mev_resistant.rs  mod.rs  pool.rs
monitoring/: README.md  alert.rules.yml
net/: inmem.rs  mod.rs  p2p.rs  peer_score.rs  simnet.rs  state_sync.rs
protocol/: compat.rs  dual_validate.rs  mod.rs  rolling.rs  safety.rs  transitions.rs  version.rs  wire.rs
rpc/: auth_api_key.rs  basefee.rs  block_store.rs  bloom.rs  chain_store.rs  eth_header.rs  eth_rlp.rs  eth_rpc.rs  fs_store.rs  mod.rs  mpt.rs  proofs.rs  rlp_encode.rs  router.rs  state_trie.rs  tx_decode.rs  txpool.rs  withdrawals.rs
scripts/: check.sh  generate_sbom.sh  repro_check.sh  run_3nodes_local.sh
scripts/chaos/: apply_netem.sh  clear_netem.sh  partition_docker.sh
scripts/load/: hey_smoke.sh  k6_rpc.js
scripts/release/: release.sh
scripts/testnet/: launch_testnet.sh  send_test_tx.sh  testnet_status.sh
sdk/typescript/: package.json  tsconfig.json
sdk/typescript/scripts/: generate.js
sdk/typescript/src/: index.ts
spec/upgrade/: UPGRADE_SPEC.md  compat_matrix.md
storage/: block_store.rs  evidence_store.rs  meta.rs  mod.rs  peer_store.rs  receipts_store.rs  snapshots.rs
storage/migrations/: background.rs  m0004_protocol_version.rs  m0005_add_tx_index.rs  mod.rs
tests/: determinism.rs  inmem_p2p_flow.rs  integration.rs  invariants_placeholder.rs  pos_rewards.rs  proptests.rs  replay.rs  schema_migration.rs  simnet.rs  simnet_block_request_flow.rs  simnet_five_node_eventual.rs  simnet_late_joiner.rs  simnet_partition_heal_safety.rs  simple_producer_integration.rs  two_node_proposal_flow.rs  upgrade_sim.rs  vm_integration.rs
types/: mod.rs  tx_evm.rs  tx_vm.rs
vm/: bytecode.rs  errors.rs  gas.rs  interpreter.rs  mod.rs  state.rs
