[package]
name = "iona-fuzz"
version = "0.0.1"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

iona = { path = ".." }
bincode = "1"
serde_json = "1"

[[bin]]
name = "consensus_msg"
path = "fuzz_targets/consensus_msg.rs"

[[bin]]
name = "tx_json"
path = "fuzz_targets/tx_json.rs"

[[bin]]
name = "p2p_frame_decode"
path = "fuzz_targets/p2p_frame_decode.rs"

[[bin]]
name = "vm_bytecode"
path = "fuzz_targets/vm_bytecode.rs"

[[bin]]
name = "block_header"
path = "fuzz_targets/block_header.rs"

[[bin]]
name = "rpc_json"
path = "fuzz_targets/rpc_json.rs"
